fix: css overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+  html,
+  body,
+  :root {
+    overflow-x: hidden;
+  }
+
   :root {
     font-family: "Geist", "Inter", sans-serif;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
